--- a/index.htm
+++ b/index.htm
@@ -1,290 +1,84 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>HTML5 Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        input:valid {
+            border:2px solid green;
 
-<style>
-body {
-  background-color: black;
-  color: white;
-}
-h1 {
-  flex-basis: 100%;
-  color: white;
-  font-weight: 700;
-  margin: 10px;
-}
-.titleSpans {
-  background-image: linear-gradient(darkblue, darkred);
-  width: 100%;
-  margin: 1 white solid;
-  box-shadow: 1px 1px 1px black;
-  }
-.titleSpans:hover {
-  background-image: linear-gradient(blue, darkred);
-
-}
-a {
-  color: white;
-  text-decoration: none;
+        }
+        input:invalid{
+            border:2px solid red;
+        }
 
 
-}
-header {
-  display: flex;
-  flex-wrap: wrap;
-  width: 80%;
-  margin: auto;
-  text-align: center;
+    </style>
 
-}
-input {
-  width: 80%;
-  margin: auto;
-  height: 2em;
-  font-size: x-large;
-  margin-bottom: 35px;
-
-}
-div {
-
-  display: flex;
-  background-color: #1034cc;
-  text-align: center;
-  width: 80%;
-  border-radius: 5px;
-  margin: 4px 10%;
-  color: white;
-  font-size: large;
-  font-weight: 800;
-  padding: 5px;
-
-}
-span {
-  flex-basis: 16.5%;
-  background-color: #5485ed;
-  margin: 3px;
-  text-align: center;
-
-}
-@media (max-width: 1000px) {
-    div {width: 94%;
-        margin: 3px 3%;}
-
-}
-@media (max-width: 820px) {
-    div {width: 96%;
-        margin: 3px 2%;
-        flex-wrap: wrap;
-      align-content: stretch;}
-    header {width: 100%;}
-    input {
-          width: 96%;}
-    span {
-            flex-basis: 33%;
-            flex-grow: 2;
-            }
-
-}
-img {
-  height: 60px;
-}
-span {
-  flex-basis: 16.5%;
-  background-color: #5485ed;
-  margin: 3px;
-  text-align: center;
-
-}
-</style>
 
 </head>
 <body>
-  <script>
-let endArray = [];
-let countryArray = [];
-let header = document.createElement('header');
-            //header.innerHTML = 'Countries';
-            document.body.appendChild(header);
-            //menu.textContent = input;
+    <form>
+        <label for="firstname">First Name:</label>
+        <input id="firstname" type="text" name="firstname" placeholder="First name" value="John" required  pattern = "[a-zA-Z]{3,5}"/> <br />
+        <label for="lastname" >Last Name</label>
+        <input id="lastname" type="text" name="lastname" placeholder="Last name" value="Smith"> <br />
+        <label for="user-value">Enter a number:</label>
+        <input id="user-value" type="number" name="user-value" min="5" max="100" /> <br />
+        <label>Date started:</label>
+        <input type="date"/> <br />
 
-            h1Create('Countries');
-let name = document.createElement('input');
-            //name.id = id;
-            name.autofocus = true;
-            name.setAttribute('placeholder','Enter search query...');
-            name.setAttribute('oninput', 'refresh()');
-            header.appendChild(name);
-let article = document.createElement("article");
-
-            document.body.appendChild(article);
-            //divCreate([1, 2, 3, 4, 5, 6]);
-function divCreate(a) {
-  let div = document.createElement('div');
-
-              div.classList.add("divs");
-              article.appendChild(div);
-
-            for (i=0; i<6; i++) {
-            let span = document.createElement('span');
-            span.innerHTML = a[i];
-            div.appendChild(span);}
-            }
-
-function loadJSON(callback) {
-
-    let json = new XMLHttpRequest();
-        json.overrideMimeType("application/json");
-    json.open('GET', 'all.json', false); // Replace 'my_data' with the path to your file
-    json.onreadystatechange = function () {
-          if (json.readyState == 4 && json.status == "200") {
-
-            // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
-            callback(json.responseText);
-          }
-    };
-    json.send(null);
- }
- let title = ['Country', 'Capital', 'Population', 'Area', 'Language(s)', 'Flag'];
- let divT = document.createElement('div');
-
-             divT.id="titleDiv";
-             article.appendChild(divT);
-             divT.style.backgroundColor = 'darkred';
-           for (i=0; i<6; i++) {
-           let span = document.createElement('span');
-           span.classList = 'titleSpans';
-           span.setAttribute('onclick',`sort(${i})`);
-           span.innerHTML = title[i];
-           //`<a href='#' onclick='sort(${i});'>${title[i]}</a>`;
-           divT.appendChild(span);}
-
-
- loadJSON(function(response) {
-  // Parse JSON string into object
-    let countries = JSON.parse(response);
-    //console.log(actual_JSON);
-    //let keysArray = ['name', 'capital', 'population', 'area', 'languages', 'flag' ];
-    //for (i=0; i<actual_JSON.length;i++){
-    countries.forEach(country =>{
-      let {name, capital, population, area, languages, flag} = country;
-      countryArray.push([name, capital, population, area, languages, flag]);
-
-
-    });
-    //let {name, capital, population, area, languages, flag} = keysQuery;
+        <label for="female">Female</label><input id="female" type="radio" name="gender" value="Female"/>
+        <label for="male">Male</label><input id="male" type="radio" name="gender" value="Male"/>
+        <label for="others">Others</label><input id="others" type="radio"name="gender"  value="Other" /> <br />
+        <label for="skills">Skills</label> <br />
+        <input type="checkbox" value="HTML"><label>HTML</label> <br />
+        <input type="checkbox" value="CSS"><label>CSS</label><br />
+        <input type="checkbox" value="JavaScript"><label>JavaScript</label> <br />
+        <p>Choose one skill:</p>
+        <select>
+            <option value="html">HTML</option>
+            <option value="css">CSS</option>
+            <option value="javascript">JavaScript</option>
+            <option value="react">React</option>
+            <option value="redux">Redux</option>
+            <option value="node">Node</option>
+        </select>
+        <br />
+        <label for="cv">Attach your cv here:</label> <br />
+        <input id="cv" type="file" multiple> <br />
+        <label>Favorite color:</label>
+        <input type="color"> <br />
+        <label>Your Email:</label>
+        <input type="email"> <br />
+        <label for="password">Password</label>
+        <input type="password" /> <br />
+        <label for="message">Leave a message here:</label><br />
+        <textarea id='123' rows="10" cols="50">Leave a message</textarea> <br />
+        <input type="reset">
+        <!-- <button type="submit">Submit</button> -->
+        <input  type="submit" value="Submit" />
+        <button id='buttonz'>test</button>
+        <script>
+        const addButton = document.querySelector('#buttonz');
+//console.log(addButton)
 
 
 
-  //}
-});
+addButton.addEventListener('click',function(e){
+              let div = document.createElement('div');
+              div.textContent = document.getElementById('123').value;
+              console.log(document.getElementById('123').value);
+              div.style.backgroundColor = 'lightgreen';
+              div.style.color = "blue"
+              document.body.appendChild(div);
+        //console.log(document.getElementById('123').value);
+              e.preventDefault();
+      });
+        </script>
+    </form>
 
-function h1Create(input) {
-                      let h1 = document.createElement('h1');
-                      h1.innerHTML = input + '<br>';
-                      header.appendChild(h1);
-                    }
-
-
-function start() {
-  for (j=0; j<countryArray.length;j++) {
-    //console.log(j + ' ' + countryArray[j] + countryArray[j][4][0].name);
-  if (countryArray[j][4].length==1) {
-  divCreate([countryArray[j][0],countryArray[j][1],countryArray[j][2],countryArray[j][3], countryArray[j][4][0].name, `<img alt='flag' src='${countryArray[j][5]}'/>`]);
-  }
-  else if (countryArray[j][4].length==2)
-  {
-  divCreate([countryArray[j][0],countryArray[j][1],countryArray[j][2],countryArray[j][3], `${countryArray[j][4][0].name} ${countryArray[j][4][1].name}`, `<img alt='flag' src='${countryArray[j][5]}'/>`]);}
-  else {
-  divCreate([countryArray[j][0],countryArray[j][1],countryArray[j][2],countryArray[j][3], `${countryArray[j][4][0].name} ${countryArray[j][4][1].name} ${countryArray[j][4][2].name}`, `<img alt='flag' src='${countryArray[j][5]}'/>`]);}
-}
-endArray = countryArray;
-}
-function refresh() {
-    endArray = [];
-    let toRemove = document.querySelectorAll('.divs');
-    for (y = 0; y < toRemove.length; y++)
-    {
-    article.removeChild(toRemove[y]);
-    }
-    for (z=0; z<countryArray.length; z++){
-    if (countryArray[z][0].toLowerCase().includes(name.value.toLowerCase())||countryArray[z][1].toLowerCase().includes(name.value.toLowerCase()) ) {
-    if (countryArray[z][4].length==1) {
-    divCreate([countryArray[z][0],countryArray[z][1],countryArray[z][2],countryArray[z][3], countryArray[z][4][0].name, `<img alt='flag' src='${countryArray[z][5]}'/>`]);
-    }
-    else if (countryArray[z][4].length==2)
-    {
-    divCreate([countryArray[z][0],countryArray[z][1],countryArray[z][2],countryArray[z][3], `${countryArray[z][4][0].name} ${countryArray[z][4][1].name}`, `<img alt='flag' src='${countryArray[z][5]}'/>`]);
-    }
-    else {
-    divCreate([countryArray[z][0],countryArray[z][1],countryArray[z][2],countryArray[z][3], `${countryArray[z][4][0].name} ${countryArray[z][4][1].name} ${countryArray[z][4][2].name}`, `<img alt='flag' src='${countryArray[z][5]}'/>`]);
-    }
-
-    endArray.push(countryArray[z]);
-
-    // someArray.push(countries[i]);
-    // a = randomHexaNumberGenerator();
-    // divCreate(countries[i], a);
-    }}
-}
-function sort(number) {
-   if (number === 2 || number === 3)
-        {
-     endArray.sort(compareNum(number));
-     let toRemove = document.querySelectorAll('.divs');
-     for (y = 0; y < toRemove.length; y++)
-     {
-     article.removeChild(toRemove[y]);
-     }
-     for (z=0; z<endArray.length; z++){
-     if (endArray[z][4].length==1) {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], endArray[z][4][0].name, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-     }
-     else if (endArray[z][4].length==2)
-     {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], `${endArray[z][4][0].name} ${endArray[z][4][1].name}`, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-     }
-     else {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], `${endArray[z][4][0].name} ${endArray[z][4][1].name} ${endArray[z][4][2].name}`, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-     }
-   }}
-   else {
-     endArray.sort(compare(number));
-     let toRemove = document.querySelectorAll('.divs');
-     for (y = 0; y < toRemove.length; y++)
-     {
-     article.removeChild(toRemove[y]);
-     }
-     for (z=0; z<endArray.length; z++){
-     if (endArray[z][4].length==1) {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], endArray[z][4][0].name, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-     }
-     else if (endArray[z][4].length==2)
-     {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], `${endArray[z][4][0].name} ${endArray[z][4][1].name}`, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-     }
-     else {
-     divCreate([endArray[z][0],endArray[z][1],endArray[z][2],endArray[z][3], `${endArray[z][4][0].name} ${endArray[z][4][1].name} ${endArray[z][4][2].name}`, `<img alt='flag' src='${endArray[z][5]}'/>`]);
-          }
-      }
-      }
-    }
-function compare(num) {
-    return function(o, p){
-      a = o[num];
-      b = p[num];
-   if (a< b) return -1;
-   if (a> b) return 1;
-   return 0;}
- }
-function compareNum(num) {
-  return function(o, p){
-    a = o[num];
-    b = p[num];
-  return (a-b);}
-}
-//console.log(countryArray);
-start();
-
-
-</script>
 </body>
 </html>
