--- a/projects.htm
+++ b/projects.htm
@@ -58,11 +58,13 @@ All my latest projects and written code is on the GitHub, thus underneath link p
 <nav>
   <a href="http://pkiczko.github.io/projectI2/index.htm" class="button4" style="height:80px;">2cnd website project<br>
   <font class='code'>HTML, CSS:grid</font></a>
-  <a href="http://pkiczko.github.io/projectI2/index2.htm" class="button4" style="height:80px;">2cnd website project<br>
+  <a href="http://pkiczko.github.io/projectI2/index.htm" class="button4" style="height:80px;">2cnd website project<br>
   <font class='code'>HTML, CSS:flexbox/grid</font></a>
-  <a href="http://pkiczko.github.io/projectI3/index2.htm" class="button4" style="height:80px;">3rd project<br>
+  <a href="http://pkiczko.github.io/projectI3/index.htm" class="button4" style="height:80px;">3rd project<br>
   <font class='code'>HTML, CSS:flexbox</font></a>
-  <a href="http://pkiczko.github.io/projectI5/index2.htm" class="button4" style="height:80px;">5th - multiple projects<br>
+  <a href="http://pkiczko.github.io/projectI5/table_generator.htm" class="button4" style="height:80px;">Table generator<br>
+  <font class='code'>HTML, CSS, JavaScript</font></a>
+  <a href="http://pkiczko.github.io/projectI5/hexNumberGen.htm" class="button4" style="height:80px;">Color generator<br>
   <font class='code'>HTML, CSS, JavaScript</font></a>
   <a href="http://pkiczko.github.io/countries/index.htm" class="button4" style="height:80px;">Countries project<br>
   <font class='code'>HTML, CSS:flexbox, JavaScript</font></a>
