--- a/projects.htm
+++ b/projects.htm
@@ -66,6 +66,8 @@ All my latest projects and written code is on the GitHub, thus underneath link p
   <font class='code'>HTML, CSS, JavaScript</font></a>
   <a href="http://pkiczko.github.io/projectI5/hexNumberGen.htm" class="button4" style="height:80px;">Color generator<br>
   <font class='code'>HTML, CSS, JavaScript</font></a>
+  <a href="http://pkiczko.github.io/projectI5/country_list.htm" class="button4" style="height:80px;">Colorful countries<br>
+  <font class='code'>HTML, CSS:flexbox, JavaScript</font></a>
   <a href="http://pkiczko.github.io/countries/index.htm" class="button4" style="height:80px;">Countries project<br>
   <font class='code'>HTML, CSS:flexbox, JavaScript</font></a>
   <a href="http://pkiczko.github.io/grid/index.htm" class="button4" style="height:80px;">Another Portfolio<br>
