--- a/projects.htm
+++ b/projects.htm
@@ -52,26 +52,35 @@ All my latest projects and written code is on the GitHub, thus underneath link p
   <a href="https://github.com/pkiczko/JavaScriptRequests" class="button4"  style="height:80px;">CodeAcademy requests<br>
   <font class='code'>JavaScript</font></a>
   <a href="https://github.com/pkiczko/projectI1" class="button4"  style="height:80px;">Portfolio - Project 1<br>
-  <font class='code'>HTML/CSS/JS</font></a>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI2" class="button4"  style="height:80px;">Website - Project 2<br>
+  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI3" class="button4"  style="height:80px;">Another Website - Project 3<br>
+  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI5" class="button4"  style="height:80px;">Multiple works - Project 5<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/countries" class="button4"  style="height:80px;">Countries Project<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
 </nav>
 <h3 style="text-align: center">Website links:</h3>
 <nav>
   <a href="http://pkiczko.github.io/projectI2/index.htm" class="button4" style="height:80px;">2cnd website project<br>
-  <font class='code'>HTML, CSS:grid</font></a>
+  <font class='code'>HTML/CSS:grid</font></a>
   <a href="http://pkiczko.github.io/projectI2/index.htm" class="button4" style="height:80px;">2cnd website project<br>
-  <font class='code'>HTML, CSS:flexbox/grid</font></a>
+  <font class='code'>HTML/CSS:flexbox grid</font></a>
   <a href="http://pkiczko.github.io/projectI3/index.htm" class="button4" style="height:80px;">3rd project<br>
-  <font class='code'>HTML, CSS:flexbox</font></a>
-  <a href="http://pkiczko.github.io/projectI5/table_generator.htm" class="button4" style="height:80px;">Table generator<br>
-  <font class='code'>HTML, CSS, JavaScript</font></a>
+  <font class='code'>HTML/CSS:flexbox</font></a>
+
   <a href="http://pkiczko.github.io/projectI5/hexNumberGen.htm" class="button4" style="height:80px;">Color generator<br>
-  <font class='code'>HTML, CSS, JavaScript</font></a>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
   <a href="http://pkiczko.github.io/projectI5/country_list.htm" class="button4" style="height:80px;">Colorful countries<br>
-  <font class='code'>HTML, CSS:flexbox, JavaScript</font></a>
+  <font class='code'>HTML/CSS:flexbox/JavaScript</font></a>
+  <a href="http://pkiczko.github.io/projectI5/table_generator.htm" class="button4" style="height:80px;">Table generator<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
   <a href="http://pkiczko.github.io/countries/index.htm" class="button4" style="height:80px;">Countries project<br>
-  <font class='code'>HTML, CSS:flexbox, JavaScript</font></a>
-  <a href="http://pkiczko.github.io/grid/index.htm" class="button4" style="height:80px;">Another Portfolio<br>
-  <font class='code'>HTML, CSS:grid</font></a>
+  <font class='code'>HTML/CSS:flexbox/JavaScript</font></a>
+  <!-- <a href="http://pkiczko.github.io/grid/index.htm" class="button4" style="height:80px;">Another Portfolio<br>
+  <font class='code'>HTML, CSS:grid</font></a> -->
 </nav>
 <br>
 <br>
