--- a/account/index.htm
+++ b/account/index.htm
@@ -48,7 +48,7 @@
     </span>
     <span>
       <br>
-      <input id='reset' value="Reset" type="button" onclick='localStorage.clear(); dataArray=[]; refresh();'>
+      <input id='reset' value="Reset" type="button" onclick='eraseAll();'>
 
     </span>
   </form>
